Fix layout issues and clean scripts

--- a/css/common-styles.css
+++ b/css/common-styles.css
@@ -31,6 +31,10 @@ a {
   text-decoration: none;
 }
 
+.centered {
+  text-align: center;
+}
+
 .inlineFlex {
   display: inline-flex;
   justify-content: center;
